<?xml version="1.0" encoding="utf-8"?>
<!--  Copyright (C) 2014-2016 The Dirty Unicorns Project
      Copyright (C) 2016 AospExtended ROM Project

  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->

<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    
    <!-- General app strings -->
    <string name="starfield_title">StarField</string>
    <string name="add">Add</string>
    <string name="advanced">Advanced</string>
    <string name="cancel">Cancel</string>
    <string name="default_text">Default</string>
    <string name="dlg_ok">OK</string>
    <string name="attention">Attention</string>
    <string name="loading">Loading\u2026</string>
    <string name="reset">Reset</string>
    <string name="reset_colors">Reset colors</string>
    <string name="reset_android">Android</string>
    <string name="text_title">Text</string>
    <string name="icon_title">Icon</string>
    <string name="color_title">Color</string>
    <string name="colors_title">Colors</string>

    <!-- starfield categories -->
    <string name="status_bar_category">Statusbar</string>
    <string name="notifications_panel_category">QS panel</string>
    <string name="system_category">System</string>
    <string name="lockscreen_category">Lockscreen</string>
    <string name="themes_category">Themes</string>
    <string name="build_tweaks_summary_title">WIP!!!!!!!</string>
    <string name="listview">ListView</string>
    <string name="general_category">General Settings</string>
    <string name="spoofing_category">Spoofing</string>
    <string name="clock_category">Clock Customizations</string>
    <string name="privacy_ind">Privacy Indicators</string>

    <!-- App info dialog -->
    <string name="starfield_dialog_title">Time To Shine!</string>
    <string name="starfield_dialog_message">If you find a bug with any of these settings, report it in our Telegram Group. You MUST include the following when posting a bug report:\n\n1. A logcat or last_kmsg\n2. Kernel and mods used\n3. Useful information\n\nIf you fail to report something adequately, DO NOT expect things to be fixed.</string>
    <string name="starfield_dialog_toast">Shining In The Universe</string>

    <string name="search">Search</string>
    <string name="search_apps">Search apps</string>

    <!-- Incall vibrate options -->
    <string name="incall_vibration_category">In-call vibration options</string>
    <string name="incall_vibrate_connect_title">Vibrate on connect</string>
    <string name="incall_vibrate_call_wait_title">Vibrate on call waiting</string>
    <string name="incall_vibrate_disconnect_title">Vibrate on disconnect</string>

    <!-- Global Actions -->
    <string name="global_actions_advanced_reboot_title">Enable advanced restart</string>
    <string name="global_actions_advanced_reboot_summary">Show options for recovery and bootloader in power menu</string>

    <!-- Ignore window secure -->
    <string name="ignore_window_secure_title">Ignore window secure flags</string>
    <string name="ignore_window_secure_summary">This removes the screenshots and screenrecords limits for all applications. Normally, special applications are replaced with black areas in records. This can be convenient in some cases but may lead to privacy leaks. After changing this toggle, you may need to restart applications for the change to take effect.</string>

    <!-- Less boring heads up -->
    <string name="less_boring_heads_up_title">Priority heads up</string>
    <string name="less_boring_heads_up_summary">Show heads up only for calls, messages, alarms, reminders and priority conversations</string>

    <!-- Unlimited google photos storage -->
    <string name="use_photos_spoof_title">Unlimited Photos storage</string>
    <string name="use_photos_spoof_summary">Spoof your device as Pixel XL for Google Photos app only to provide unlimited storage for backup</string>

    <!-- Unlock FPS for specific games -->
    <string name="use_games_spoof_title">Unlock higher FPS in games</string>
    <string name="use_games_spoof_summary">Spoof your device as different model for specific games to unlock higher FPS</string>

    <!-- Statusbar clock -->
    <string name="status_bar_clock_position_title">Clock position</string>
    <string name="status_bar_clock_position_left">Left</string>
    <string name="status_bar_clock_position_right">Right</string>
    <string name="status_bar_clock_position_center">Center</string>
    <string name="status_bar_am_pm_title">Clock AM/PM style</string>
    <string name="status_bar_am_pm_disabled">24-hour clock is enabled</string>
    <string name="status_bar_am_pm_normal">Normal</string>
    <string name="status_bar_am_pm_small">Small</string>
    <string name="status_bar_am_pm_hidden">Hidden</string>
    
    <!-- Privacy Indicator -->
    <string name="mic_camera_privacy_indicator_title">Mic and camera privacy indicator</string>
    <string name="mic_camera_privacy_indicator_summary">Show indicator when any app uses mic or camera</string>
    <string name="location_privacy_indicator_title">Location privacy indicator</string>
    <string name="location_privacy_indicator_summary">Show indicator when any app uses location</string>
    <string name="projection_privacy_indicator_title">Media projection privacy indicator</string>
    <string name="projection_privacy_indicator_summary">Show indicator when device screen is projected</string>

    <!-- Monet settings -->
    <string name="monet_settings_title">Theming settings</string>
    <string name="monet_settings_sammary">A few extra settings to customize monet engine</string>
    <string name="theme_style_title">Theme style</string>
    <string name="theme_style_tonal_spot">Tonal Spot (Default)</string>
    <string name="theme_style_vibrant">Vibrant</string>
    <string name="theme_style_expressive">Exspressive</string>
    <string name="theme_style_spritz">Spritz</string>
    <string name="theme_style_rainbow">Rainbow</string>
    <string name="theme_style_fruit_salad">Fruit Salad</string>
    <string name="theme_style_muted">Muted</string>
    <string name="theme_style_content">Content</string>
    <string name="color_source_title">Color source</string>
    <string name="color_source_both">Both (Default)</string>
    <string name="color_source_home">Home wallpaper</string>
    <string name="color_source_lock">Lock wallpaper</string>
    <string name="color_source_preset">Preset</string>
    <string name="accent_color_title">Accent Color</string>
    <string name="accent_color_summary">Override default accent color</string>
    <string name="accent_background_title">Accent background</string>
    <string name="accent_background_summary">Choose a different accent color for background</string>
    <string name="bg_color_title">Background Color</string>
    <string name="bg_color_summary">Override default background accent color</string>
    <string name="luminance_factor_title">Luminance</string>
    <string name="luminance_factor_summary">Higher values produce brighter colors</string>
    <string name="chroma_factor_title">Chroma</string>
    <string name="chroma_factor_summary">Higher values produce stronger colors</string>
    <string name="tint_background_title">Tint Background</string>
    <string name="tint_background_summary">Make Luminance and Chroma selection affect background colors as well</string>

    <!-- QS footer data usage -->
    <string name="qs_show_data_usage_title">Show data usage</string>
    <string name="qs_show_data_usage_summary">Show daily cellular/Wi-Fi data usage in QS footer</string>

    <!-- Lockscreen battery info indicator  -->
   <string name="lockscreen_battery_info_title">Lockscreen charging info</string>
   <string name="lockscreen_battery_info_summary">Show charging current, voltage, wattage and battery temperature on lockscreen while charging</string>

    <!-- Spoof storage encryption status -->
    <string name="spoof_storage_encryption_status_title">Use storage encryption spoofing</string>
    <string name="spoof_storage_encryption_status_summary">Spoof storage encryption status to encrypted.</string>

    <!-- [CHAR_LIMIT=NONE] Developer Settings: Title of the settings category for theme overlays. -->
    <string name="theme_customization_category">Theming</string>
    <!-- [CHAR_LIMIT=NONE] Developer Settings: Title of the setting which enables overlays to customize headline and body fonts. -->
    <string name="theme_customization_font_title">Headline / Body font</string>
    <string name="theme_customization_font_summary">Set system font style</string>
    <!-- [CHAR_LIMIT=NONE] Developer Settings: Title of the setting which enables overlays to customize the adaptive icon shape (e.g. launcher and quick settings icons). -->
    <string name="theme_customization_icon_shape_title">Icon shape</string>
    <string name="theme_customization_icon_shape_summary">Set system icon shape style</string>
    <!-- [CHAR_LIMIT=NONE] Developer Settings: Title of the setting which enables overlays to customize the system wide icon pack. -->
    <string name="theme_customization_icon_pack_title">Icon pack</string>
    <string name="theme_customization_icon_pack_summary">Set custom icon pack style</string>

    <!-- WiFi Standard icon -->
    <string name="wifi_standard_icon_title">WiFi standard</string>
    <string name="wifi_standard_icon_summary">Display WiFi standard next to WiFi signal</string>

    <!-- 4G icon -->
    <string name="show_fourg_icon_title">4G icon</string>
    <string name="show_fourg_icon_summary">Display 4G icon in signal icon instead LTE</string>    

    <!-- Data disabled icon -->
    <string name="data_disabled_icon_title">Show data disabled icon</string>
    <string name="data_disabled_icon_summary">Display the exclamation mark at the signal bar when data is disabled</string>

    <!-- Roaming indicator icon -->
    <string name="roaming_indicator_icon_title">Show roaming indicator icon</string>
    <string name="roaming_indicator_icon_summary">Display roaming indicator above signal icon when in roaming mode</string>
</resources>
