<?xml version="1.0" encoding="utf-8"?>
<!--  Copyright (C) 2017 The Dirty Unicorns Project

  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
    
    <PreferenceCategory
        android:key="clock_custom"
        android:title="@string/clock_category" >

        <!-- Clock Customizations -->
        <com.pixelstar.support.preferences.SecureSettingListPreference
            android:key="status_bar_clock_position"
            android:title="@string/status_bar_clock_position_title"
            android:summary="%s"
            android:dialogTitle="@string/status_bar_clock_position_title"
            android:entries="@array/status_bar_clock_position_entries"
            android:entryValues="@array/status_bar_clock_position_values"
            android:defaultValue="0" />

        <com.pixelstar.support.preferences.SecureSettingListPreference
            android:key="status_bar_am_pm"
            android:title="@string/status_bar_am_pm_title"
            android:summary="%s"
            android:dialogTitle="@string/status_bar_am_pm_title"
            android:entries="@array/status_bar_am_pm_entries"
            android:entryValues="@array/status_bar_am_pm_values"
            android:defaultValue="2" />

       <com.pixelstar.support.preferences.SystemSettingSwitchPreference
            android:key="wifi_standard_icon"
            android:title="@string/wifi_standard_icon_title"
            android:summary="@string/wifi_standard_icon_summary"
            android:defaultValue="false"/>

        <com.pixelstar.support.preferences.SystemSettingSwitchPreference
            android:key="show_fourg_icon"
            android:title="@string/show_fourg_icon_title"
            android:summary="@string/show_fourg_icon_summary"
            android:defaultValue="false"/>

	<com.pixelstar.support.preferences.SystemSettingSwitchPreference
            android:key="data_disabled_icon"
            android:title="@string/data_disabled_icon_title"
            android:summary="@string/data_disabled_icon_summary"
            android:defaultValue="true"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:key="prirvacy"
        android:title="@string/privacy_ind" >

        <com.pixelstar.support.preferences.SecureSettingSwitchPreference
            android:key="enable_camera_privacy_indicator"
            android:title="@string/mic_camera_privacy_indicator_title"
            android:summary="@string/mic_camera_privacy_indicator_summary"
            android:defaultValue="true" />

        <com.pixelstar.support.preferences.SecureSettingSwitchPreference
            android:key="enable_location_privacy_indicator"
            android:title="@string/location_privacy_indicator_title"
            android:summary="@string/location_privacy_indicator_summary"
            android:defaultValue="true" />

        <com.pixelstar.support.preferences.SecureSettingSwitchPreference
            android:key="enable_projection_privacy_indicator"
            android:title="@string/projection_privacy_indicator_title"
            android:summary="@string/projection_privacy_indicator_summary"
            android:defaultValue="true" />
    </PreferenceCategory>

</PreferenceScreen>
