<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">

    <PreferenceCategory
        android:title="@string/general_category">

	<com.pixelstar.support.preferences.SystemSettingSwitchPreference
            android:key="less_boring_heads_up"
            android:title="@string/less_boring_heads_up_title"
            android:summary="@string/less_boring_heads_up_summary"
            android:defaultValue="false" />

    <com.pixelstar.support.preferences.SecureSettingSwitchPreference
            android:key="qs_show_data_usage"
            android:title="@string/qs_show_data_usage_title"
            android:summary="@string/qs_show_data_usage_summary"
            android:defaultValue="true" />
    </PreferenceCategory>
   
</PreferenceScreen>